Changes for 3.0.15rc1

New features:

Bug fixes:
........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
..F....... [ZBX-13345] removed SID from URL in screen edit mode (miks)
...G...... [ZBX-13246] fixed processing of command line arguments which are longer than 2KB for proc.num and proc.mem items on AIX (viktors)
...G...... [ZBX-13254] fixed 'skip' parameter behaviour for log[], log.count[], logrt[], logrt.count[] items in case log files initially do not exist (Andris)
...G...... [ZBX-13253] fixed losing the 1st record by log[] and logrt[] items if 'skip' parameter is used and log file initially is empty (Andris)
A......... [ZBX-12991] removed default values for "active_since" and "active_till" fields in maintenance.create API method (Ivo)
..F....... [ZBX-11305] fixed color and label for event status on event details page (gcalenko)
..F....... [ZBX-13085] fixed trigger mass update form redirect to trigger list on attempt to attach dependent trigger if there was errors in previous submit attempts (gcalenko)
..F....... [ZBX-13078] fixed javascript error in user group permission granting popup (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.0.14

3.0.14rc2 was released as 3.0.14 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.14rc2

New features:
A.F....... [ZBX-12825] implemented delayed URL validation; enabled user macros containing URLs as valid; made URL validation as optional; improved URL validation (miks)

Bug fixes:
..F....... [ZBX-13181] fixed database configuration error reporting and message filtering when messages are received from clear_messages function (miks)