@@ -3,6 +3,7 @@ Changes for 3.0.15rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)
 ........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
 A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
 ...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
